--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "stackmen",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "dev": "nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +15,7 @@
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "nodemon": "^3.1.7"
   }
 }
